# GT-Office

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.en.md  README.md  README_CN.md  SECURITY.md  openclaw - 快捷方式.lnk  package-lock.json  package.json  split_all_tests.py  start.bat
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
apps/desktop-tauri/: index.html  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/binaries/: gto-agent-mcp-sidecar-aarch64-apple-darwin
apps/desktop-tauri/src-tauri/capabilities/: default.json  surface.json
apps/desktop-tauri/src-tauri/resources/gto-agent-communication/agents/: openai.yaml
apps/desktop-tauri/src-tauri/src/: app_state.rs  app_state_tests.rs  channel_adapter_runtime.rs  channel_adapter_runtime_tests.rs  channel_adapter_tests.rs  channel_sinks.rs  daemon_bridge.rs  external_tool_profiles.rs  filesystem_watcher.rs  filesystem_watcher_tests.rs  lib.rs  local_bridge.rs  main.rs  mcp_bridge.rs  process_utils.rs  split_tests.py
apps/desktop-tauri/src-tauri/src/commands/: agent.rs  agentic_one.rs  ai_config.rs  channel_adapter.rs  filesystem.rs  filesystem_tests.rs  git.rs  git_tests.rs  keymap.rs  mod.rs  security.rs  settings.rs  system.rs  tasks.rs  terminal.rs  terminal_tests.rs  workspace.rs  workspace_tests.rs
apps/desktop-tauri/src-tauri/src/commands/agent/: binding_cleanup.rs
apps/desktop-tauri/src-tauri/src/commands/file_explorer/: mod.rs  preview.rs
apps/desktop-tauri/src-tauri/src/commands/git/: mod.rs  status_coordinator.rs
apps/desktop-tauri/src-tauri/src/commands/settings/: ai_config.rs  mod.rs  update.rs
apps/desktop-tauri/src-tauri/src/commands/task_center/: mod.rs
apps/desktop-tauri/src-tauri/src/commands/terminal/: mod.rs
apps/desktop-tauri/src-tauri/src/commands/tests/: filesystem_tests.rs  git_tests.rs  terminal_tests.rs  workspace_tests.rs
apps/desktop-tauri/src-tauri/src/commands/tool_adapter/: binding_target_validation.rs  command_catalog.rs  mod.rs  tool_profiles.rs
apps/desktop-tauri/src-tauri/src/commands/workspace/: mod.rs  surface.rs
apps/desktop-tauri/src-tauri/src/connectors/: credential_store.rs  mod.rs  telegram.rs
apps/desktop-tauri/src-tauri/src/connectors/feishu/: account_store.rs  api.rs  inbound.rs  mod.rs  probe.rs  types.rs  webhook.rs  websocket.rs
apps/desktop-tauri/src-tauri/src/connectors/feishu/tests/: mod.rs
apps/desktop-tauri/src-tauri/src/connectors/telegram/: api.rs  inbound.rs  mod.rs  offset_store.rs
apps/desktop-tauri/src-tauri/src/connectors/wechat/: api.rs  auth.rs  mod.rs  types.rs
apps/desktop-tauri/src-tauri/src/terminal_debug/: dev_log.rs  human_log.rs  mod.rs
apps/desktop-tauri/src-tauri/src/tests/: app_state_tests.rs  channel_adapter_runtime_tests.rs  channel_adapter_tests.rs  filesystem_watcher_tests.rs
apps/desktop-web/: DARK_MODE_FIX.md  QUICK_TEST_GUIDE.md  README.md  WSL_RUN.md  dark-mode-comparison.html  eslint.config.js  index.html  package.json  pnpm-lock.yaml  replace-colors.ps1  run-wsl.sh  start-wsl.bat  tailwind.config.js  tsconfig.app.json  tsconfig.tests.json  vite.config.ts
crates/gt-abstractions/: Cargo.toml
crates/gt-agent/: Cargo.toml
crates/gt-ai-config/: Cargo.toml
crates/gt-ai-config/src/: catalog.rs  lib.rs  models.rs  service.rs
crates/gt-changefeed/: Cargo.toml
crates/gt-core/: Cargo.toml
crates/gt-daemon/: Cargo.toml
crates/gt-filesystem/: Cargo.toml
crates/gt-git/: Cargo.toml
crates/gt-git/src/: lib.rs
crates/gt-git/tests/: lib_tests.rs
crates/gt-keymap/: Cargo.toml
crates/gt-security/: Cargo.toml
crates/gt-session-log/: Cargo.toml
crates/gt-settings/: Cargo.toml
crates/gt-storage/: Cargo.toml
crates/gt-storage/src/: agent_repository.rs  ai_config_repository.rs  lib.rs  sqlite.rs
crates/gt-task/: Cargo.toml
crates/gt-telemetry/: Cargo.toml
crates/gt-terminal/: Cargo.toml
crates/gt-terminal-core/: Cargo.toml
crates/gt-terminal/src/: lib.rs
crates/gt-terminal/tests/: lib_tests.rs
crates/vb-ai-config/: Cargo.toml
crates/vb-ai-config/src/: catalog.rs  lib.rs  models.rs  service.rs
crates/vb-daemon/: Cargo.toml
crates/vb-daemon/src/: daemon.rs  main.rs
crates/vb-daemon/src/fileio/: mod.rs  service.rs
crates/vb-daemon/src/protocol/: codec.rs  message.rs
crates/vb-daemon/src/search/: mod.rs  service.rs
crates/vb-daemon/src/terminal/: mod.rs  service.rs
crates/vb-daemon/src/transport/: tcp.rs
crates/vb-daemon/src/util/: ring_buffer.rs
crates/vb-daemon/tests/: codec_tests.rs  fileio_tests.rs  ring_buffer_tests.rs  search_tests.rs
crates/vb-git/: Cargo.toml
crates/vb-git/src/: lib.rs
crates/vb-git/tests/: lib_tests.rs
crates/vb-storage/: Cargo.toml
crates/vb-storage/src/: agent_repository.rs  ai_config_repository.rs  lib.rs
crates/vb-terminal/: Cargo.toml
crates/vb-terminal-core/: Cargo.toml
crates/vb-terminal-core/src/: lib.rs  output_router.rs  scrollback.rs  snapshot.rs  types.rs  vt_engine.rs
crates/vb-terminal-core/tests/: integration_tests.rs  output_router_tests.rs  scrollback_tests.rs  vt_engine_tests.rs
crates/vb-terminal/src/: lib.rs
crates/vb-terminal/tests/: lib_tests.rs
docs/: 01_需求与产品设计.md  02_系统架构与模块目录设计.md  03_项目开发进度跟踪.md  04_上下文交接文档.md  05_高质量功能设计_核心工作流.md  06_API与事件契约草案.md  07_依赖选型与精简清单.md  08_原生TUI与结构化协议拦截设计.md  08_高性能Sidecar_Daemon架构与Skeleton.md  09_响应式样式单位重构方案.md  API_CONTRACTS.md  ARCHITECTURE.md  AWESOME_LIST_SUBMISSIONS.md  DEMO_RECORDING_GUIDE.md  DEPENDENCIES.md  EXTERNAL_CHANNEL_RELAY_ARCHITECTURE.md  GTO_CLI_IMPROVEMENT_PLAN.md  OPERATION_PLAN.md  PRODUCT_VISION.md  README.md  WORKFLOWS.md  feishu.md  release-process.md
scripts/: build-mcp-sidecar.cjs  ensure-tauri-cli-binding.cjs  ensure-web-native-bindings.cjs  macos-distribution-guard.cjs  macos-unsigned-bundle.cjs  run-tauri-with-env.cjs  tauri-bundle-guards.cjs  test-agent-output.sh
temp/: port-probe-localhost.cjs
(+563 files in other folders)
