[workspace]
resolver = "2"
members = [
  "apps/desktop-tauri/src-tauri",
  "crates/gt-abstractions",
  "crates/gt-agent",
  "crates/gt-core",
  "crates/gt-workspace",
  "crates/gt-filesystem",
  "crates/gt-terminal",
  "crates/gt-terminal-core",
  "crates/gt-git",
  "crates/gt-tools",
  "crates/gt-changefeed",
  "crates/gt-settings",
  "crates/gt-session-log",
  "crates/gt-keymap",
  "crates/gt-ai-config",
  "crates/gt-task",
  "crates/gt-storage",
  "crates/gt-security",
  "crates/gt-telemetry",
  "crates/gt-daemon",
]
exclude = ["tools/gto-agent-mcp-sidecar"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["GT Office Team"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
