[package]
name = "gt-ai-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
gt-abstractions = { path = "../gt-abstractions" }
gt-security = { path = "../gt-security" }
gt-settings = { path = "../gt-settings" }
gt-storage = { path = "../gt-storage" }
gt-tools = { path = "../gt-tools" }
toml = "0.8"
