[package]
name = "gt-ai-config"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
gt-abstractions = { path = "../gt-abstractions" }
gt-security = { path = "../gt-security" }
gt-settings = { path = "../gt-settings" }
gt-storage = { path = "../gt-storage" }
gt-tools = { path = "../gt-tools" }
toml = "0.8"
