[package]
name = "gt-git"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
git2 = "0.20"
similar = "2.6"
gt-abstractions = { path = "../gt-abstractions" }

[dev-dependencies]
uuid = { workspace = true }
gt-workspace = { path = "../gt-workspace" }
