[package]
name = "gt-storage"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
gt-agent = { path = "../gt-agent" }
uuid = { workspace = true }
