[package]
name = "gt-terminal"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
gt-abstractions = { path = "../gt-abstractions" }
gt-terminal-core = { path = "../gt-terminal-core" }
portable-pty = "0.8"
vt100 = "0.15"

[dev-dependencies]
gt-workspace = { path = "../gt-workspace" }
