[package]
name = "vb-ai-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vb-abstractions = { path = "../vb-abstractions" }
vb-security = { path = "../vb-security" }
vb-settings = { path = "../vb-settings" }
vb-storage = { path = "../vb-storage" }
vb-tools = { path = "../vb-tools" }
toml = "0.8"
