[package]
name = "vb-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytes = "1"
bincode = "1.3"
futures-util = { version = "0.3", features = ["sink"] }
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
portable-pty = "0.8"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
