[package]
name = "vb-git"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
git2 = "0.20"
vb-abstractions = { path = "../vb-abstractions" }

[dev-dependencies]
uuid = { workspace = true }
vb-workspace = { path = "../vb-workspace" }
