[package]
name = "vb-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
vb-agent = { path = "../vb-agent" }
uuid = { workspace = true }
