[package]
name = "vb-terminal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
vt100 = "0.15"
portable-pty = "0.8"

[dev-dependencies]
pretty_assertions = "1"