[package]
name = "vb-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
vb-abstractions = { path = "../vb-abstractions" }
vb-terminal-core = { path = "../vb-terminal-core" }
portable-pty = "0.8"
vt100 = "0.15"

[dev-dependencies]
vb-workspace = { path = "../vb-workspace" }
