[package]
name = "gtoffice-desktop-tauri"
version = "0.1.3"
edition = "2021"
description = "GT Office desktop shell"

[lib]
name = "gtoffice_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
bincode = "1.3"
# Preview enhancement
image = "0.25"
mime_guess = "2.0"
content_inspector = "0.2"
pdfium-render = "0.8"
futures-util = { version = "0.3", features = ["sink"] }
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
notify = "6"
qrcode = "0.14"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
open = "5.3"
strip-ansi-escapes = "0.2"
tauri = { version = "2", features = ["protocol-asset"] }
tokio = { workspace = true, features = ["fs", "io-util", "process"] }
vt100 = "0.15"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { workspace = true }
uuid = { workspace = true }
feishu-sdk = { version = "0.1.2", features = ["websocket"] }

vb-abstractions = { path = "../../../crates/vb-abstractions" }
vb-agent = { path = "../../../crates/vb-agent" }
vb-core = { path = "../../../crates/vb-core" }
vb-workspace = { path = "../../../crates/vb-workspace" }
vb-filesystem = { path = "../../../crates/vb-filesystem" }
vb-terminal = { path = "../../../crates/vb-terminal" }
vb-git = { path = "../../../crates/vb-git" }
vb-tools = { path = "../../../crates/vb-tools" }
vb-changefeed = { path = "../../../crates/vb-changefeed" }
vb-settings = { path = "../../../crates/vb-settings" }
vb-session-log = { path = "../../../crates/vb-session-log" }
vb-keymap = { path = "../../../crates/vb-keymap" }
vb-ai-config = { path = "../../../crates/vb-ai-config" }
vb-task = { path = "../../../crates/vb-task" }
vb-storage = { path = "../../../crates/vb-storage" }
vb-security = { path = "../../../crates/vb-security" }
vb-telemetry = { path = "../../../crates/vb-telemetry" }
vb-daemon = { path = "../../../crates/vb-daemon" }

[dev-dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
