[package]
name = "gtoffice-desktop-tauri"
version = "0.1.8"
edition = "2021"
description = "GT Office desktop shell"
license.workspace = true

[lib]
name = "gtoffice_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
bincode = "1.3"
# Preview enhancement
image = "0.25"
mime_guess = "2.0"
content_inspector = "0.2"
pdfium-render = "0.8"
futures-util = { version = "0.3", features = ["sink"] }
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
notify = "6"
qrcode = "0.14"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
open = "5.3"
strip-ansi-escapes = "0.2"
tauri = { version = "2", features = ["protocol-asset"] }
tokio = { workspace = true, features = ["fs", "io-util", "process"] }
vt100 = "0.15"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { workspace = true }
uuid = { workspace = true }
feishu-sdk = { version = "0.1.2", features = ["websocket"] }

gt-abstractions = { path = "../../../crates/gt-abstractions" }
gt-agent = { path = "../../../crates/gt-agent" }
gt-core = { path = "../../../crates/gt-core" }
gt-workspace = { path = "../../../crates/gt-workspace" }
gt-filesystem = { path = "../../../crates/gt-filesystem" }
gt-terminal = { path = "../../../crates/gt-terminal" }
gt-git = { path = "../../../crates/gt-git" }
gt-tools = { path = "../../../crates/gt-tools" }
gt-changefeed = { path = "../../../crates/gt-changefeed" }
gt-settings = { path = "../../../crates/gt-settings" }
gt-session-log = { path = "../../../crates/gt-session-log" }
gt-keymap = { path = "../../../crates/gt-keymap" }
gt-ai-config = { path = "../../../crates/gt-ai-config" }
gt-task = { path = "../../../crates/gt-task" }
gt-storage = { path = "../../../crates/gt-storage" }
gt-security = { path = "../../../crates/gt-security" }
gt-telemetry = { path = "../../../crates/gt-telemetry" }
gt-daemon = { path = "../../../crates/gt-daemon" }
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
